Implemented login for the web frontend
