# backend/generated/go/model_login_request.go
@@ -1,0 +1,44 @@
+/*
+ * STB config API
+ *
+ * This is the API that is used to configure an STB
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type LoginRequest struct {
+
+	Username string `json:"username"`
+
+	Password string `json:"password"`
+}
+
+// AssertLoginRequestRequired checks if the required fields are not zero-ed
+func AssertLoginRequestRequired(obj LoginRequest) error {
+	elements := map[string]interface{}{
+		"username": obj.Username,
+		"password": obj.Password,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
+	return nil
+}
+
+// AssertRecurseLoginRequestRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of LoginRequest (e.g. [][]LoginRequest), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseLoginRequestRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aLoginRequest, ok := obj.(LoginRequest)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertLoginRequestRequired(aLoginRequest)
+	})
+}
